updated pom with sonar rules

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -222,6 +222,14 @@
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>${maven.sonar.plugin.version}</version>
+					<executions>
+						<execution>
+							<phase>verify</phase>
+							<goals>
+								<goal>sonar</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 <!--				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
