updated sonar version

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -184,7 +184,7 @@
 					<plugin>
 						<groupId>org.sonarsource.scanner.maven</groupId>
 						<artifactId>sonar-maven-plugin</artifactId>
-						<version>${maven.sonar.plugin.version}</version>
+						<version>3.7.0.1746</version>
 						<executions>
 							<execution>
 								<phase>verify</phase>
