fix login and correct other springboot, log issues

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 #---------------------------UserRegistration---------------------------------
 auth.server.user-register-url=https://dev.mosip.io/v1/authmanager/user
 mosip.kernel.emailnotifier-url=https://dev.mosip.io/v1/emailnotifier/email/send
@@ -192,11 +191,33 @@ masterdata_database_username=masteruser
 masterdata_database_password=Mosip@dev123
 
 
-mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
-
+mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
+mosip.kernel.audit.manager.api={$mosip.admin-services.audit.manager.api}
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 
 
+mosip.open-id.base-url=https://mosipkeycloak.southindia.cloudapp.azure.com
 
+mosip.admin-services.open-id.realmid=mosip
+
+mosip.admin-services.open-id.login_flow.name=authorization_code
+
+mosip.admin-services.open-id.clientid=mosip-admin-client
+
+mosip.admin-services.open-id.clientsecret=60e7ac5d-bd8f-420b-b3a8-6a2353c3affd
+
+mosip.admin-services.redirecturi=http://localhost:8098/v1/admin/login-redirect/
+
+mosip.admin-services.open-id.login_flow.scope=cls
+
+mosip.admin-services.open-id.login_flow.response_type=code
+
+mosip.admin-services.open-id.authorization_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
+	
+mosip.admin-services.open-id.token_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/token
+
+mosip.admin-services.open-id.token.header=Authorization
+	
+mosip.admin-services.cookie.security=false
