add missing properties

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -265,3 +265,28 @@ mosip.kernel.registrationcenterid.length=5
 
 mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
+mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
+
+mosip.open-id.base-url=https://mosipkeycloak.southindia.cloudapp.azure.com
+
+mosip.admin-services.open-id.realmid=mosip
+
+mosip.admin-services.open-id.login_flow.name=authorization_code
+
+mosip.admin-services.open-id.clientid=mosip-admin-client
+
+mosip.admin-services.open-id.clientsecret=60e7ac5d-bd8f-420b-b3a8-6a2353c3affd
+
+mosip.admin-services.redirecturi=http://localhost:8098/v1/admin/login-redirect/
+
+mosip.admin-services.open-id.login_flow.scope=cls
+
+mosip.admin-services.open-id.login_flow.response_type=code
+
+mosip.admin-services.open-id.authorization_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
+	
+mosip.admin-services.open-id.token_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/token
+
+mosip.admin-services.open-id.token.header=Authorization
+	
+mosip.admin-services.cookie.security=false
