--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd admin
-        mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
+        mvn -B -U package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
     - name: Ready the springboot artifacts
       run: find -name '*.jar' -executable -type f  -exec zip release.zip {} +
 
@@ -103,7 +103,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd admin
-        mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
+        mvn -B -U package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
     - name: Publish the maven package
       run: |
         chmod +x ./deploy.sh
