--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -21,14 +21,14 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.0.7</version>
+			<version>1.0.9-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
 			<version>1.0.6</version>
 		</dependency>
-      <dependency>
+      	<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
 			<version>1.0.9-SNAPSHOT</version>
