--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -33,7 +33,11 @@
 			<artifactId>kernel-auth-adapter</artifactId>
 			<version>1.0.9-SNAPSHOT</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-idvalidator-rid</artifactId>
+			<version>1.0.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
