--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>1.0.7-rc1</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.0.9-SNAPSHOT</version>
+			<version>1.0.9-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -31,7 +31,7 @@
       	<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.0.9-SNAPSHOT</version>
+			<version>1.0.9-rc1</version>
 		</dependency>
 		
 		<dependency>
