--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 	</parent>
 	<artifactId>kernel-syncdata-service</artifactId>
 	<name>kernel-syncdata-service</name>
-	<version>1.0.9</version>
+	<version>1.0.9-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.core.version>1.0.9</kernel.core.version>
+		<kernel.core.version>1.0.9-SNAPSHOT</kernel.core.version>
 		<kernel.auth.adaptor.version>1.0.6</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.0.6</kernel.logger.version>
-		<kernel.crypto.version>1.0.9</kernel.crypto.version>	
+		<kernel.crypto.version>1.0.9-SNAPSHOT</kernel.crypto.version>	
 	</properties>
 	<dependencies>
 		<dependency>
