--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -392,8 +392,8 @@
                     		</includeOnlyProperties>
                     		<commitIdGenerationMode>full</commitIdGenerationMode>
  				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-				<!-- <format>json</format> -->
-			</configuration>
+			<format>json</format> 
+			</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
