--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -393,8 +393,8 @@
                     		<commitIdGenerationMode>full</commitIdGenerationMode>
  				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
 			<format>json</format> 
-			</configuration> -->
-			</plugin>
+			</configuration> 
+			</plugin>-->
 		</plugins>
 	</build>
 </project>
