--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -392,9 +392,9 @@
                     		</includeOnlyProperties>
                     		<commitIdGenerationMode>full</commitIdGenerationMode>
  				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-				<!-- <format>json</format> -->
+				<!-- <format>json</format> 
 			</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 </project>
