--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -23,6 +23,14 @@
 			<artifactId>kernel-core</artifactId>
 			<version>1.0.9-rc1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.23.4</version>
+		    <scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
