--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.0.7</version>
+	<version>1.0.6</version>
 	<packaging>pom</packaging>
 	
 	<name>admin</name>
@@ -266,16 +266,10 @@
 							</execution>
 						</executions>
 				</plugin>
-<!--				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>${maven.javadoc.version}</version>
-				</plugin>
--->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9.1</version>
+					<version>${maven.javadoc.version}</version>
 					<executions>
 						<execution>
 					 		<id>attach-javadocs</id>
@@ -285,7 +279,7 @@
 						</execution>
 					</executions>
 					<configuration>
-                         			<doclint>none</doclint>
+                         <doclint>none</doclint>
                 	</configuration>
                </plugin>			
 				<plugin>
@@ -312,8 +306,7 @@
 					  		</goals>
 						</execution>
 				  	</executions>
-				</plugin>
-			
+				</plugin>			
 				<plugin>
 				  	<groupId>org.apache.maven.plugins</groupId>
 				  	<artifactId>maven-gpg-plugin</artifactId>
@@ -365,6 +358,15 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>	
 <!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
