--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -23,7 +23,12 @@
 			<artifactId>kernel-core</artifactId>
 			<version>1.0.9-rc1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>compile</scope>
+		</dependency>		
 		<dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-core</artifactId>
