Spring Boot Test – disabled DEBUG and INFO logs

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -41,3 +41,9 @@ mosip.kernel.signature.signature-version-id=v1.0
 mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=http://localhost:8086/v1/masterdata/dynamicfields
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
+
+## To disable the logging (spring boot)
+logging.level.org.springframework=OFF
+logging.level.root=OFF
+spring.main.banner-mode=off
+
