Spring Boot Test – disabled DEBUG and INFO logs

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -31,3 +31,8 @@ mosip.kernel.sign-url=https://dev.mosip.io/v1/signature/sign
 masterdata.registerdevice.timestamp.validate=+5
 mosip.kernel.applicant.type.age.limit = 5
 
+## To disable the logging (spring boot)
+logging.level.org.springframework=OFF
+logging.level.root=OFF
+spring.main.banner-mode=off
+
