--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -105,7 +105,7 @@ jobs:
     - name: Publish the maven package
       run: |
         chmod +x ./deploy.sh
-        ./deploy.sh admin $GITHUB_WORKSPACE/settings.xml SNAPSHOT
+        ./deploy.sh admin $GITHUB_WORKSPACE/settings.xml rc1
       env:
         GPG_TTY: $(tty)
     - name: Analyze with SonarCloud
