--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -28,12 +28,16 @@
 			<artifactId>kernel-logger-logback</artifactId>
 			<version>1.0.6</version>
 		</dependency>
-      	<dependency>
+		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
 			<version>1.0.9-rc1</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-authcodeflowproxy-api</artifactId>
+			<version>1.2.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
