--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -194,7 +194,7 @@ masterdata_database_password=Mosip@dev123
 mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
 mosip.kernel.audit.manager.api={$mosip.admin-services.audit.manager.api}
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
-auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
+
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 
 
@@ -221,3 +221,9 @@ mosip.admin-services.open-id.token_endpoint=${mosip.open-id.base-url}/auth/realm
 mosip.admin-services.open-id.token.header=Authorization
 	
 mosip.admin-services.cookie.security=false
+
+mosip.kernel.auth.auth-code-flow-login-url=https://dev.mosip.net/v1/authmanager/login/{redirectURI}
+
+mosip.module.auth.auth-code-flow-login-redirect-url=https://dev.mosip.net/v1/admin/login-redirect/{redirectURI}
+
+auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
