--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -290,3 +290,9 @@ mosip.admin-services.open-id.token_endpoint=${mosip.open-id.base-url}/auth/realm
 mosip.admin-services.open-id.token.header=Authorization
 	
 mosip.admin-services.cookie.security=false
+
+mosip.kernel.auth.auth-code-flow-login-url=http://localhost:8091/v1/authmanager/login/{redirectURI}
+
+mosip.module.auth.auth-code-flow-login-redirect-url=http://localhost:8098/v1/admin/login-redirect/{redirectURI}
+
+auth.server.admin.validate.url=http://localhost:8091/v1/authmanager/authorize/admin/validateToken
