properties added to test

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -193,7 +193,7 @@ masterdata_database_password=Mosip@dev123
 
 mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
 mosip.kernel.audit.manager.api={$mosip.admin-services.audit.manager.api}
-auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 
@@ -222,8 +222,20 @@ mosip.admin-services.open-id.token.header=Authorization
 	
 mosip.admin-services.cookie.security=false
 
-mosip.kernel.auth.auth-code-flow-login-url=https://dev.mosip.net/v1/authmanager/login/{redirectURI}
+mosip.iam.module.login_flow.name=authorization_code
 
-mosip.module.auth.auth-code-flow-login-redirect-url=https://dev.mosip.net/v1/admin/login-redirect/{redirectURI}
+mosip.iam.module.clientID=mosip-admin-client
 
-auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+mosip.iam.module.clientsecret=ca8cce1f-fae2-4e4a-9ce8-029465bd6726
+
+mosip.iam.module.redirecturi=https://dev.mosip.net/v1/admin/login-redirect/
+
+mosip.iam.module.login_flow.scope=cls
+
+mosip.iam.module.login_flow.response_type=code
+
+mosip.iam.authorization_endpoint=https://dev.mosip.net/keycloak/auth/realms/{realmId}/protocol/openid-connect/auth
+
+mosip.iam.module.admin_realm_id=mosip
+
+mosip.iam.token_endpoint=https://dev.mosip.net/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
