--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -296,3 +296,21 @@ mosip.kernel.auth.auth-code-flow-login-url=http://localhost:8091/v1/authmanager/
 mosip.module.auth.auth-code-flow-login-redirect-url=http://localhost:8098/v1/admin/login-redirect/{redirectURI}
 
 auth.server.admin.validate.url=http://localhost:8091/v1/authmanager/authorize/admin/validateToken
+
+mosip.iam.module.login_flow.name=authorization_code
+
+mosip.iam.module.clientID=mosip-admin-client
+
+mosip.iam.module.clientsecret=ca8cce1f-fae2-4e4a-9ce8-029465bd6726
+
+mosip.iam.module.redirecturi=http://localhost:8098/v1/admin/login-redirect/
+
+mosip.iam.module.login_flow.scope=cls
+
+mosip.iam.module.login_flow.response_type=code
+
+mosip.iam.authorization_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/auth
+
+mosip.iam.module.admin_realm_id=mosip
+
+mosip.iam.token_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
