--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -239,3 +239,5 @@ mosip.iam.authorization_endpoint=https://dev.mosip.net/keycloak/auth/realms/{rea
 mosip.iam.module.admin_realm_id=mosip
 
 mosip.iam.token_endpoint=https://dev.mosip.net/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
+
+auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
