Proxy auth code (#28)
* properties added to test

* removing scanning

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -226,6 +226,7 @@ mosip.iam.module.login_flow.name=authorization_code
 
 mosip.iam.module.clientID=mosip-admin-client
 
+
 mosip.iam.module.clientsecret=ca8cce1f-fae2-4e4a-9ce8-029465bd6726
 
 mosip.iam.module.redirecturi=https://dev.mosip.net/v1/admin/login-redirect/
@@ -239,3 +240,5 @@ mosip.iam.authorization_endpoint=https://dev.mosip.net/keycloak/auth/realms/{rea
 mosip.iam.module.admin_realm_id=mosip
 
 mosip.iam.token_endpoint=https://dev.mosip.net/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
+
+auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
