MOSIP-8564 Sleuth integration (#364)
* spring sleuth changes to add traceid

* adding requestURI, default request trace logging filter and updated pom version to 1.2.0-SNAPSHOT

* Fixed test case failure in notification-service

* updated kernel-parent version to 1.2.0-SNAPSHOT

* modified all services to 1.2.0-snapshot version and changed log pattern

Co-authored-by: ase-101 <>

--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
 	<parent>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>kernel-syncdata-service</artifactId>
 	<name>kernel-syncdata-service</name>
-	<version>1.0.9</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.core.version>1.0.9</kernel.core.version>
-		<kernel.auth.adaptor.version>1.0.6</kernel.auth.adaptor.version>
+		<kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
+		<kernel.auth.adaptor.version>1.2.0-SNAPSHOT</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.0.6</kernel.logger.version>
 		<kernel.crypto.version>1.0.9</kernel.crypto.version>	
 	</properties>
@@ -56,6 +56,7 @@
 			<version>${h2.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
