--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -24,6 +24,19 @@
 			<version>1.0.9-rc1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>compile</scope>
+		</dependency>		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.23.4</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
 			<version>1.0.6</version>
