--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -21,20 +21,14 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.0.9-rc1</version>
+			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>compile</scope>
-		</dependency>		
-		<dependency>
-		    <groupId>org.mockito</groupId>
-		    <artifactId>mockito-core</artifactId>
-		    <version>2.23.4</version>
-		    <scope>test</scope>
-		</dependency>
+		</dependency>	
 		
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
