--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -17,7 +17,7 @@ management.endpoints.web.exposure.include=info,health,refresh
 server.port=8098
 server.servlet.path=/v1/admin
 
-javax.persistence.jdbc.url=jdbc:postgresql://104.211.208.136:9001/mosip_master
+javax.persistence.jdbc.url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
 javax.persistence.jdbc.user=masteruser
 javax.persistence.jdbc.password=Mosip@dev123
 
