Added separate h2 db for spring batch

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -53,9 +53,9 @@ javax.persistence.jdbc.driver=org.postgresql.Driver
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.jdbc.lob.non_contextual_creation=true
-hibernate.hbm2ddl.auto=none
+hibernate.hbm2ddl.auto=none	
 hibernate.show_sql=false
-hibernate.format_sql=false
+hibernate.format_sql=false	
 hibernate.connection.charSet=utf8
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
@@ -168,7 +168,7 @@ mosip.admin.processflow.reg=${spring.cloud.config.uri}/registration/${spring.pro
 mosip.admin.processflow.regclient=${spring.cloud.config.uri}/registration-processor/${spring.profiles.active}/${spring.cloud.config.label}/registration-processor-${spring.profiles.active}.properties
 mosip.admin.processflow.prereg=${spring.cloud.config.uri}/registration-processor/${spring.profiles.active}/${spring.cloud.config.label}/registration-processor-${spring.profiles.active}.properties
 #mosip.admin.processflow.prereg=${spring.cloud.config.uri}/pre-registration/${spring.profiles.active}/${spring.cloud.config.label}/pre-registration-${spring.profiles.active}.properties
-mosip.admin.packetstatus.api=https://dev.mosip.io/registrationprocessor/v1/registrationstatus/search
+mosip.admin.packetstatus.api=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
 
 mosip.admin.master.resource=${spring.cloud.config.uri}/admin/dev/${spring.cloud.config.label}/admin-dev.properties
 
@@ -184,10 +184,10 @@ mosip.admin.resource.buttons = Add Center,Activate,Deactivate
 mosip.admin.resource.actions = Activate,Decommision,Users,Machines,Devices,Edit
 mosip.admin.resource.pages = 5,10,15,20,25,30,35,40,45,50
 
-mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationtransaction/search
-mosip.kernel.zone-validation-url=https://dev.mosip.io/v1/masterdata/zones/authorize
+mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationtransaction/search
+mosip.kernel.zone-validation-url=https://dev.mosip.net/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
-masterdata_database_url=jdbc:postgresql://104.211.202.203:9001/mosip_master
+masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
 masterdata_database_username=masteruser
 masterdata_database_password=Mosip@dev123
 
@@ -196,7 +196,7 @@ mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audi
 mosip.kernel.audit.manager.api={$mosip.admin-services.audit.manager.api}
 auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
 
 
 mosip.open-id.base-url=https://mosipkeycloak.southindia.cloudapp.azure.com
