--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -71,6 +71,11 @@
 			<version>${spring.boot.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		     <artifactId>jaxb-api</artifactId>
+		    <version>2.3.0</version>
+		 </dependency>
 	</dependencies>
 	<build>
 		<plugins>
