--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -17,9 +17,9 @@ management.endpoints.web.exposure.include=info,health,refresh
 server.port=8098
 server.servlet.path=/v1/admin
 
-javax.persistence.jdbc.url=${masterdata_database_url}
-javax.persistence.jdbc.user=${masterdata_database_username}
-javax.persistence.jdbc.password=${masterdata_database_password}
+#javax.persistence.jdbc.url=${masterdata_database_url}
+#javax.persistence.jdbc.user=${masterdata_database_username}
+#javax.persistence.jdbc.password=${masterdata_database_password}
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
