Added Hikari config properties

--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -24,5 +24,6 @@ server.servlet.path=/v1/admin
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
 health.config.enabled=false
-
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG 
+logging.level.com.zaxxer.hikari=TRACE
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
