--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
 		<kernel.auth.adaptor.version>1.2.0-SNAPSHOT</kernel.auth.adaptor.version>
-		<kernel.logger.version>1.0.6</kernel.logger.version>
+		<kernel.logger.version>1.2.0-SNAPSHOT</kernel.logger.version>
 		<kernel.crypto.version>1.2.0-SNAPSHOT</kernel.crypto.version>	
 	</properties>
 	<dependencies>
