--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -35,4 +35,4 @@ mosip.kernel.applicant.type.age.limit = 5
 logging.level.org.springframework=OFF
 logging.level.root=OFF
 spring.main.banner-mode=off
-
+mosip.stage.environment=Developer
