device_machine_search

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -50,3 +50,4 @@ mosip.kernel.sign-url=https://qa.mosip.io/v1/signature/sign
 masterdata.registerdevice.timestamp.validate=+5
 mosip.kernel.applicant.type.age.limit = 5
 mosip.stage.environment=Staging
+mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
