registered device data is removed from master data sync, as these tables are moved to PMS. Removed syncjob related DB configuration

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -48,15 +48,12 @@ hibernate.generate_statistics=false
 
 
 
-# config properties for master alone 
+# config properties for master alone
 spring.master-datasource.jdbcUrl=jdbc:postgresql://<Database IP>:<Port>/mosip_master
 spring.master-datasource.username=masteruser
 spring.master-datasource.password=<Database Password>
 #
-## config properties for kernel alone
-spring.kernel-datasource.jdbcUrl=jdbc:postgresql://<Database IP>:<Port>/mosip_kernel
-spring.kernel-datasource.username=kerneluser
-spring.kernel-datasource.password=<Database Password>
+
 
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
@@ -65,3 +62,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=http://localhost:8086/v1/masterdata/dynamicfields
 
+mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+mosip.kernel.keymanager-service-validate-url=https://dev.mosip.io/v1/authorize/admin/validateToken
