--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=localhost
 #spring.cloud.config.label=master
-#spring.profiles.active=dev
+#spring.profiles.active=local
 spring.cloud.config.name=kernel
 spring.application.name=kernel-syncdata-service
 #management.security.enabled=false
@@ -26,10 +26,6 @@ spring.master-datasource.jdbcUrl=${syncdata_database_url}
 spring.master-datasource.username=${syncdata_database_username}
 spring.master-datasource.password=${syncdata_database_password}
 
-# config properties for kernel alone
-spring.kernel-datasource.jdbcUrl=${syncjob_database_url}
-spring.kernel-datasource.username=${syncjob_database_username}
-spring.kernel-datasource.password=${syncjob_database_password}
 
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
