fixed bug for validation in bulkupload api

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -187,9 +187,9 @@ mosip.admin.resource.pages = 5,10,15,20,25,30,35,40,45,50
 mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationtransaction/search
 mosip.kernel.zone-validation-url=https://dev.mosip.net/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
-masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
-masterdata_database_username=masteruser
-masterdata_database_password=Mosip@dev123
+javax.persistence.jdbc.url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
+javax.persistence.jdbc.user=masteruser
+javax.persistence.jdbc.password=mosip123
 
 
 mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
