--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.0.9-rc1</version>
+			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-dataaccess-hibernate</artifactId>
-			<version>1.0.7</version>
+			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
