--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -46,4 +46,5 @@ mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager
 logging.level.org.springframework=OFF
 logging.level.root=OFF
 spring.main.banner-mode=off
+mosip.kernel.keymanager.cert.url=https://localhost:8800/v1/keymanager/getCertificate
 
