--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -257,7 +257,7 @@
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>${maven.jacoco.plugin.version}</version>
 				</plugin>
-				<plugin>
+			<!--	<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>${maven.sonar.plugin.version}</version>
@@ -269,7 +269,7 @@
 								</goals>
 							</execution>
 						</executions>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
