--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -68,3 +68,14 @@ mosip.kernel.keymanager.cert.url=https://localhost:8800/v1/keymanager/getCertifi
 mosip.kernel.syncdata-service-machine-url=http://localhost:8086/v1/machines/%s/eng
 
 mosip.syncdata.tpm.required=false
+
+mosip.kernel.authtoken.internal.url=http://localhost:8091/v1/authmanager/authenticate/internal/useridPwd
+mosip.kernel.authtoken.internal.appId=registrationclient
+
+auth.jwt.expiry=1800000
+auth.token.header=Authorization
+auth.token.sliding.window.exp=-10
+auth.refreshtoken.header=RefreshToken
+auth.jwt.refresh.expiry=86400000
+
+mosip.kernel.pdf_owner_password=test
