removed reference of userPassword and addPassword is marked for removal (#611)
Co-authored-by: ase-101 <>

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,11 +11,11 @@ mosip.kernel.syncdata.auth-manager-roles=/roles
 mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.syncdata.auth-salt-details=/usersaltdetails
 
-mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
-mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
-mosip.kernel.syncdata.public-key-url=https://dev.mosip.io/keymanager/v1.0/publickey/{applicationId}
-mosip.kernel.syncdata.cryptomanager-encrypt-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
-mosip.kernel.syncdata.public-key-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
+mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
+mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
+mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/keymanager/v1.0/publickey/{applicationId}
+mosip.kernel.syncdata.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
+mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
 
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 
@@ -30,7 +30,7 @@ mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
 mosip.kernel.crypto.sign-algorithm-name=RS256
 
 
-mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
+mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
 
@@ -87,3 +87,5 @@ auth.refreshtoken.header=RefreshToken
 auth.jwt.refresh.expiry=86400000
 
 mosip.kernel.pdf_owner_password=test
+
+auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
