1. added sendotp api and related test cases added 2. Added Default role to dynamicfields GET api 3. Added userdetail API based on keyindex to return encrypted data 4. Removed usage of tpmRequired property during machine create and update 5. Corrected error message

--- a/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -89,3 +89,5 @@ auth.jwt.refresh.expiry=86400000
 mosip.kernel.pdf_owner_password=test
 
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+
+mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/sendotp
