--- a/kernel-syncdata-service/src/test/resources/application.properties
+++ b/kernel-syncdata-service/src/test/resources/application.properties
@@ -68,3 +68,5 @@ mosip.kernel.authtoken.REFRESH.internal.url=https://dev.mosip.net/v1/authmanager
 mosip.kernel.registrationclient.app.id=registrationclient
 mosip.kernel.registrationclient.client.id=mosip-reg-client
 mosip.kernel.registrationclient.secret.key=abc123
+
+mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/sendotp
