--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -29,11 +29,7 @@
 			<version>${lombok.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
-		</dependency>
+	
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-authcodeflowproxy-api</artifactId>
@@ -99,6 +95,7 @@
 				<version>${spring.boot.version}</version>
 				<configuration>
 					<executable>true</executable>
+					<layout>ZIP</layout>
 				</configuration>
 				<executions>
 					<execution>
