--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -243,3 +243,15 @@ mosip.iam.module.admin_realm_id=mosip
 mosip.iam.token_endpoint=https://dev.mosip.net/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
 
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+
+regproc.token.request.appid=regproc
+
+regproc.token.request.clientId=mosip-regproc-client
+
+regproc.token.request.secretKey=abc123
+
+regproc.token.request.id=io.mosip.registration.processor
+
+regproc.token.request.version=1.0
+
+KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
