--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -67,6 +67,11 @@
 		    <version>2.3.0</version>
 		 </dependency>
 		 <dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.8.6</version>
+		</dependency>
+		 <dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${springfox.version}</version>
