Added test cases for masterdata

--- a/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/bootstrap.properties
@@ -41,8 +41,8 @@ mosip.role.misp=MISP
 mosip.role.individual=INDIVIDUAL
 mosip.role.id-authentication=ID_AUTHENTICATION
 mosip.role.test=TEST
-
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/masterdata/mz/1.1.4/
 auth.server.validate.url=http://localhost:8080/validateToken
-
+mosip.kernel.applicantType.mvel.file=abc
 master.search.maximum.rows=50
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
