--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -13,27 +13,13 @@ mosip.kernel.syncdata.auth-salt-details=/usersaltdetails
 
 mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
-mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/keymanager/v1.0/publickey/{applicationId}
 mosip.kernel.syncdata.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
 
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 
-mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
-mosip.kernel.keygenerator.asymmetric-key-length=2048
-mosip.kernel.keygenerator.symmetric-algorithm-name=AES
-mosip.kernel.keygenerator.symmetric-key-length=256
-mosip.kernel.crypto.symmetric-algorithm-name=AES/GCM/PKCS5Padding
-mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
-mosip.kernel.crypto.gcm-tag-length=128
-mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
-mosip.kernel.crypto.sign-algorithm-name=RS256
-
-
-mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
-
 
 auth.server.validate.url=https://dev.mosip.io/v1/authorize/admin/validateToken
 
@@ -49,15 +35,10 @@ hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
-
-
 # config properties for master alone
 spring.master-datasource.jdbcUrl=jdbc:postgresql://<Database IP>:<Port>/mosip_master
-spring.master-datasource.username=masteruser
+spring.master-datasource.username=postgres
 spring.master-datasource.password=<Database Password>
-#
-
-
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
@@ -69,8 +50,6 @@ mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
 mosip.kernel.keymanager.cert.url=https://localhost:8800/v1/keymanager/getCertificate
 mosip.kernel.syncdata-service-machine-url=http://localhost:8086/v1/machines/%s/eng
-
-mosip.syncdata.tpm.required=false
 
 mosip.kernel.authtoken.NEW.internal.url=https://dev.mosip.net/v1/authmanager/authenticate/internal/useridPwd
 mosip.kernel.authtoken.OTP.internal.url=https://dev.mosip.net/v1/authmanager/authenticate/internal/userotp
@@ -91,3 +70,63 @@ mosip.kernel.pdf_owner_password=test
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
 mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/sendotp
+
+#----------------- Websub config -----------------
+
+syncdata.websub.topic.ca-cert=test
+syncdata.websub.callback.secret.ca-cert=secret
+syncdata.websub.callback.url.path.ca-cert=/callback/partner/ca_certificate
+syncdata.websub.callback.url.preauth.path.ca-cert=/v1/syncdata/callback/partner/ca_certificate
+syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/callback/partner/ca_certificate
+websub.publish.url=http://localhost:9191/websub/publish
+websub.hub.url=http://localhost:9191/websub/hub
+syncdata.websub.resubscription.retry.count=3
+syncdata.websub.resubscription.delay.secs=60000
+
+#----------------------- key manager config ---------------------------------------
+#Crypto asymmetric algorithm name
+mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
+#Crypto symmetric algorithm name
+mosip.kernel.crypto.symmetric-algorithm-name=AES/GCM/PKCS5Padding
+#Keygenerator asymmetric algorithm name
+mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
+#Keygenerator symmetric algorithm name
+mosip.kernel.keygenerator.symmetric-algorithm-name=AES
+#Asymmetric algorithm key length
+mosip.kernel.keygenerator.asymmetric-key-length=2048
+#Symmetric algorithm key length
+mosip.kernel.keygenerator.symmetric-key-length=256
+#Encrypted data and encrypted symmetric key separator
+mosip.kernel.data-key-splitter=#KEY_SPLITTER#
+#GCM tag length
+mosip.kernel.crypto.gcm-tag-length=128
+#Hash algo name
+mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
+#Symmtric key length used in hash
+mosip.kernel.crypto.hash-symmetric-key-length=256
+#No of iterations in hash
+mosip.kernel.crypto.hash-iteration=100000
+#Sign algo name
+mosip.kernel.crypto.sign-algorithm-name=RS256
+#Certificate Sign algo name
+mosip.kernel.certificate.sign.algorithm=SHA256withRSA
+
+mosip.kernel.keymanager.softhsm.config-path=
+mosip.kernel.keymanager.softhsm.keystore-type=
+mosip.kernel.keymanager.softhsm.keystore-pass=
+
+mosip.kernel.keymanager.certificate.default.organizational-unit=MOSIP-TECH-CENTER
+mosip.kernel.keymanager.certificate.default.organization=IITB
+mosip.kernel.keymanager.certificate.default.location=BANGALORE
+mosip.kernel.keymanager.certificate.default.state=KA
+mosip.kernel.keymanager.certificate.default.country=IN
+
+mosip.kernel.keymanager.softhsm.certificate.common-name=www.mosip.io
+mosip.kernel.keymanager.softhsm.certificate.organizational-unit=MOSIP
+mosip.kernel.keymanager.softhsm.certificate.organization=IITB
+mosip.kernel.keymanager.softhsm.certificate.country=IN
+
+# Application Id for PMS master key.
+mosip.kernel.partner.sign.masterkey.application.id=PMS
+mosip.kernel.partner.allowed.domains=test
+mosip.keymanager.dao.enabled=false
