Resolved review comments

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -104,14 +104,14 @@ mosip.kernel.keymanager.softhsm.keystore-type=
 mosip.kernel.keymanager.softhsm.keystore-pass=
 
 mosip.kernel.keymanager.certificate.default.organizational-unit=MOSIP-TECH-CENTER
-mosip.kernel.keymanager.certificate.default.organization=IITB
+mosip.kernel.keymanager.certificate.default.organization=MOSIP
 mosip.kernel.keymanager.certificate.default.location=BANGALORE
 mosip.kernel.keymanager.certificate.default.state=KA
 mosip.kernel.keymanager.certificate.default.country=IN
 
 mosip.kernel.keymanager.softhsm.certificate.common-name=www.mosip.io
-mosip.kernel.keymanager.softhsm.certificate.organizational-unit=MOSIP
-mosip.kernel.keymanager.softhsm.certificate.organization=IITB
+mosip.kernel.keymanager.softhsm.certificate.organizational-unit=MOSIP-TECH
+mosip.kernel.keymanager.softhsm.certificate.organization=MOSIP
 mosip.kernel.keymanager.softhsm.certificate.country=IN
 
 # Application Id for PMS master key.
