--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -44,7 +44,4 @@ spring.cloud.config.name=master
 pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
-mosip.kernel.applicantType.mvel.file=applicanttype.mvel
-mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.1.4
-mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
-aplication.configuration.level.version=1.1.4
+aplication.configuration.level.version=1.2.0-SNAPSHOT
