Corrected SNAPHSOT versions in pom.xml and added new keymanger props

--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -111,15 +111,16 @@ mosip.kernel.crypto.sign-algorithm-name=RS256
 #Certificate Sign algo name
 mosip.kernel.certificate.sign.algorithm=SHA256withRSA
 
-mosip.kernel.keymanager.softhsm.config-path=
-mosip.kernel.keymanager.softhsm.keystore-type=
-mosip.kernel.keymanager.softhsm.keystore-pass=
+mosip.kernel.keymanager.hsm.config-path=
+mosip.kernel.keymanager.hsm.keystore-type=
+mosip.kernel.keymanager.hsm.keystore-pass=
 
 mosip.kernel.keymanager.certificate.default.organizational-unit=MOSIP-TECH-CENTER
 mosip.kernel.keymanager.certificate.default.organization=MOSIP
 mosip.kernel.keymanager.certificate.default.location=BANGALORE
 mosip.kernel.keymanager.certificate.default.state=KA
 mosip.kernel.keymanager.certificate.default.country=IN
+mosip.kernel.keymanager.certificate.default.common-name=www.mosip.io
 
 mosip.kernel.keymanager.softhsm.certificate.common-name=www.mosip.io
 mosip.kernel.keymanager.softhsm.certificate.organizational-unit=MOSIP-TECH
