Updated keystore_type offline in test resources

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -100,7 +100,7 @@ mosip.kernel.crypto.sign-algorithm-name=RS256
 mosip.kernel.certificate.sign.algorithm=SHA256withRSA
 
 mosip.kernel.keymanager.hsm.config-path=
-mosip.kernel.keymanager.hsm.keystore-type=
+mosip.kernel.keymanager.hsm.keystore-type=OFFLINE
 mosip.kernel.keymanager.hsm.keystore-pass=
 
 mosip.kernel.keymanager.certificate.default.organizational-unit=MOSIP-TECH-CENTER
